Changelog
=========

1.18 - Unreleased
-----------------


1.17 - 2011-01-26
-----------------

* Git: Default to branch ``master`` if no branch is given in the source.
  [stefan]

* Brush up the README.
  [stefan]

* Create the sources-dir if it is not present.
  [janjaapdriessen]

* Only require argparse with Python < 2.7.
  [dobe]

* Fixed issue #35 using bzr, similar to the fix #28 for hg in last version.
  [menesis]

* Pass branch to bzr pull.
  [menesis]

* Add support for darcs.
  [lelit, azazel]

1.16 - 2010-09-16
-----------------

* Fix ``NameError: global name 'source' is not defined`` when using gitsvn
  and running ``status`` command.
  [markvl]

* Add handling of new ``-s`` command line option of zc.buildout 1.5, this
  fixes issue #29.
  [fschulze]

* Don't pass the PYTHONPATH onwards to mercurial, this fixes issue #28
  [fschulze, Christian Zagrodnick]

* Fix saving buildout options on Windows. Issue #24
  [fschulze]

* Only warn if the svn version is too old.
  [fschulze]

1.15 - 2010-07-25
-----------------

* Use ``always-checkout`` option from buildout config for ``update`` command.
  This fixes issue #18.
  [fschulze]

* Fix ``OSError: [Errno 10] No child processes`` errors in Python 2.4 and 2.5.
  (Issue #12)
  [fschulze]

* Fix CVS update.
  [sargo]

1.14 - 2010-05-15
-----------------

* Added bzr support.
  [tseaver]

* Added git branch support.
  [shywolf9982, fschulze]

1.13 - 2010-04-11
-----------------

* Tell the user which packages are queued for update or checkout, so one can
  check which packages are still updating now that the output is only printed
  after everything is done due to parallel checkouts.
  [fschulze]

* Added ``always-accept-server-certificate`` option. When set in the
  ``[buildout]`` section, then invalid certificates are always accepted for
  subversion repositories.
  [fschulze]

* Added ``-v``/``--version`` option.
  [tomster, fschulze]

* Use the much nicer argparse library instead of optparse.
  [fschulze]
